<resources>
    <string name="app_name">Parcial 2</string>
    <string name="add_product">Agregar</string>
    <string name="dialog_title">Agregar Estudiante</string>
    <string name="dialog_edit_name">Nombres</string>
    <string name="dialog_edit_lastname">Apellidos</string>
    <string name="dialog_edit_cc">Cédula</string>
    <string name="dialog_edit_tel">Número de telefono</string>
    <string name="dialog_save">Guardar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>