<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="#FE5A7A"
    android:padding="20dp"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/dialog_title"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/nameEditText"
        android:hint="@string/dialog_edit_name"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/lastnameEditText"
        android:hint="@string/dialog_edit_lastname"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/ccEditText"
        android:hint="@string/dialog_edit_cc"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/telEditText"
        android:hint="@string/dialog_edit_tel"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/dialog_save"
        android:id="@+id/saveButton"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#000000"/>
</LinearLayout>